--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4221,6 +4221,78 @@ input, select, textarea {
   margin-left: 200px; /* Same as the width of the sidenav */
 }
 
-html{scroll-behavior:smooth}
+/* NEW SIDENAV BAR */
+.sidebar {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgba(53, 56, 73, 0.95);
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
 
+.sidebar a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidebar a:hover {
+  color: #f1f1f1;
+}
+
+.sidebar .closebtn {
+  position: absolute;
+  top: 5%;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+.openbtn {
+  cursor: pointer;
+  background-color: rgba(53, 56, 73, 0.95);
+  color: white;
+  border: none;
+  margin-top: 3.5em
+}
+
+.openbtnHeader {
+  cursor: pointer;
+  background-color: rgba(53, 56, 73, 0.95);
+  color: white;
+  border: none;
+}
+
+.openbtn:hover {
+  background-color: #444;
+}
+
+.openbtnHeader:hover {
+  background-color: #444;
+}
+
+#maintemp {
+  transition: margin-left .5s;
+}
+
+#maintempHeader {
+  transition: margin-left .5s;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidebar {padding-top: 15px;}
+  .sidebar a {font-size: 18px;}
+}
+
+
+html{scroll-behavior:smooth}
 
