--- a/scriptbuilder/assets/css/main.css
+++ b/scriptbuilder/assets/css/main.css
@@ -4438,3 +4438,40 @@ li.nospacelist{
 .requiredtooltip:hover .requiredtooltiptext {
   visibility: visible;
 }
+.code-block {
+    font-family: monospace;
+	font-size: 12px;
+    white-space: pre;
+    border: 1px solid #ccc;
+    padding: 10px;
+    overflow: auto;
+    max-width: 700px;
+    margin: 20px auto;
+	position: relative;
+}
+
+.code-container {
+	display: flex;
+	border: 1px solid #ccc;
+	padding: 10px;
+	font-family: monospace;
+	max-width: 700px;
+	margin: 20px auto;
+	position: relative;
+	font-size: 12px;
+	overflow: auto;
+}
+
+.line-numbers {
+	text-align: right;
+	padding-right: 10px;
+	border-right: 1px solid #ccc;
+	user-select: none;
+	font-size: 12px;
+}
+
+.code-content {
+	white-space: pre;
+	padding-left: 10px;
+	font-size: 12px;
+}
